# shoppingCart

./: .gitignore
Backends/backendAdonis/: package-lock.json  package.json
Backends/backendAdonis/config/: swagger.js
Backends/backendAdonis/start/: routes.js
Backends/backendDjango/: db.sqlite3  pyproject.toml
Backends/backendDjango/backend/: settings.py  urls.py
Backends/backendDjango/backend/core/: router.py
Backends/backendDjango/backend/core/migrations/: 0001_initial.py
Backends/backendDjango/backend/core/models/: category.py
Backends/backendDjango/backend/core/serializers/: category.py
Backends/backendDjango/backend/core/views/: category.py
Backends/backendExpress/: index.js  package-lock.json  package.json  sqlite3-express.db
Backends/backendExpress/config/: db.config.js
Backends/backendFastAPI/: alembic.ini  main.py  pyproject.toml  shoppingCart.db
Backends/backendFastAPI/alembic/: env.py
Backends/backendFastAPI/alembic/versions/: 513cce316341_add_category_model.py  9edfe6d3763d_add_category_model.py
Backends/backendFastAPI/backend/: router.py  settings.py
Backends/backendFastAPI/backend/core/: router.py
Backends/backendFastAPI/backend/core/crud/: __init__.py  base.py  category.py
Backends/backendFastAPI/backend/core/models/: category.py
Backends/backendFastAPI/backend/core/schemas/: __init__.py  category.py
Backends/backendFastAPI/backend/core/views/: __init__.py  category.py
Backends/backendFastAPI/backend/db/: base.py  session.py
Backends/backendFastAPI/backend/utils/: deps.py
Backends/backendLaravel/: composer.json
(+15 files in other folders)
