[tool.poetry]
name = "backenddjango"
version = "0.1.0"
description = ""
authors = ["Eduardo da Silva <eduardo.silva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.5"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
