[tool.poetry]
name = "FastAPIShoppingCart"
version = "0.1.0"
description = ""
authors = ["Eduardo da Silva <eduardo.silva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
sqlalchemy = "^1.3.22"
databases = {extras = ["sqlite"], version = "^0.4.1"}
pydantic = "^1.7.3"
alembic = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
